--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --main-background : #fafafa;
     --text-color: #1e3a8a;
     --nav-background: #dbeafe;
+    --a-hover: #1e40af;
 }
 
 body {
@@ -31,4 +32,17 @@ nav {
 
 ul, li {
     list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: var(--text-color);
+    font-weight: bold;
+}
+
+a:hover {
+    display: block;
+    color: var(--a-hover);
+    transform: scale(1.1);
+    transition: transform .3s;
 }
